# MatterLockOverThreadV6

./: .gitignore  MatterLockOverThreadSolution.slcw  MatterLockOverThreadSolution.slpb  README.md  vscsolution.conf
Matter-Bootloader/: .projectlinkstore  Matter-Bootloader.slcp  Matter-Bootloader.slps  vscode.conf
Matter-Bootloader/artifact/: Matter-Bootloader-crc.s37  Matter-Bootloader.s37
Matter-Bootloader/autogen/: gen.properties  linkerfile.ld  sl_component_catalog.h  sli_psa_config_autogen.h
Matter-Bootloader/autogen/.slc_state/: .crc_config.crc
Matter-Bootloader/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
Matter-Bootloader/cmake_gcc/: Matter-Bootloader.cmake
Matter-Bootloader/config/: btl_core_cfg.h  btl_spi_controller_usart_driver_cfg.h  btl_storage_cfg.h  btl_storage_slot_cfg.h  btl_storage_slot_cfg_default.h  pin_config.h  sl_trustzone_secure_config.h
MatterLockOverThread/: .projectlinkstore  MatterLockOverThread.pintool  MatterLockOverThread.slcp  MatterLockOverThread.slpb  MatterLockOverThread.slps  vscode.conf
MatterLockOverThread/.uceditor/: .MatterLockOverThread.%extension-silabs.simplicity_sdk%power_manager.cedit
MatterLockOverThread/artifact/: MatterLockOverThread.s37
MatterLockOverThread/autogen/: linkerfile.ld  sl_component_catalog.h
MatterLockOverThread/autogen/.slc_state/: .crc_config.crc
MatterLockOverThread/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
MatterLockOverThread/autogen/zap-generated/: CodeDrivenCallback.h  CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
MatterLockOverThread/autogen/zap-generated/app/: PluginApplicationCallbacks.h  (+2 more)
MatterLockOverThread/cmake_gcc/: CMakeLists.txt  CMakePresets.json  MatterLockOverThread.cmake  toolchain.cmake
MatterLockOverThread/config/: pin_config.h  sl_matter_icd_config.h  sl_power_manager_config.h
MatterLockOverThread/config/btconf/: slc_args.json
MatterLockOverThread/config/common/: slc_args.json
MatterLockOverThread/src/: main.cpp
MatterLockOverThreadSolution_cmake/: CMakeLists.txt  CMakePresets.json
artifact/: MatterLockOverThreadSolution-app-only.gbl  MatterLockOverThreadSolution-full.s37
(+2 files in other folders)
